# corelib

./: .gitignore  BUILD  CMakeLists.txt  README
include/CoreLib/: CTThrow.hpp  FixedString.hpp  IntegerTypes.hpp  TemplateUtils.hpp  Tuple.hpp  TypeName.hpp
sample/: main.cpp
src/: TemplateUtils.tests.cpp  Tuple.tests.cpp  TypeName.tests.cpp
